--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,20 @@
 runtime: nodejs12
+
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
     static_files: build/\1
     upload: build/(.*\..+)$
+    secure: always
+    redirect_http_response_code: 301
   # Catch all handler to index.html
   - url: /.*
     static_files: build/index.html
     upload: build/index.html
-secure: always
-redirect_http_response_code: 301
+    secure: always
+    redirect_http_response_code: 301
+  
+basic_scaling:
+  max_instances: 2
+  idle_timeout: 10m
+
