--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.7.2",
     "react-feather": "^2.0.8",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
     "universal-cookie": "^4.0.3"
   },
   "scripts": {
