Added Chatbot + Bug Fixes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-simple-chatbot": "^0.6.1",
     "styled-components": "^5.1.1",
     "universal-cookie": "^4.0.3"
   },
