--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-feather": "^2.0.8",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.4.1",
     "react-simple-chatbot": "^0.6.1",
     "styled-components": "^5.1.1",
@@ -26,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "ngrok": "cd && ./ngrok http 3000 -host-header=\"localhost:3000\""
+    "ngrok": "cd && ./ngrok http 3000 -host-header=\"localhost:3000\"",
+    "sitemap": "babel-node ./src/sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0"
   }
 }
