--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.7.2",
     "react-feather": "^2.0.8",
+    "react-markdown": "^4.3.1",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
