--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.1",
     "formik": "^2.1.5",
     "moment": "^2.27.0",
     "react": "^16.13.1",
@@ -21,7 +22,8 @@
     "react-scripts": "3.4.1",
     "react-simple-chatbot": "^0.6.1",
     "styled-components": "^5.1.1",
-    "universal-cookie": "^4.0.3"
+    "universal-cookie": "^4.0.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
